Sed version of dynamic environment variables

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,10 +1,11 @@
 server {
     listen       80;
-    server_name  $SERVER_NAME;
+    server_name  ${SERVER_NAME};
 
     root /usr/share/nginx/html;
     index index.html index.htm;
-    gzip $GZIP;
+    gzip ${GZIP};
+    gzip_types application/javascript;
 
     location / {
       try_files $uri $uri/ /index.html;
